Update footer info (Rex)
Update footer info (Rex)

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       document.addEventListener("click", myfunction); -->
   <!--       the click is one of the event, which is in this link
       https://www.w3schools.com/jsref/dom_obj_event.asp -->
-  <footer>Michael: Levels Catherine: Check Characters Rex: Hangman Image</footer>
+  <footer>Michael: Levels Catherine: Check Characters Rex: Hangman Image and Debug</footer>
 </body>
 <script src="script.js"></script>
 
